# Huggingface_TextSummary

./: .dockerignore  .env_template  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  docker-compose_registry.yml  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-test.yml  docker-build-deploy.yml  registry-pull.yml
models/: exceptions.py  forms.py  model.py  security.py
static/css/: style.css
static/favicon/: browserconfig.xml  site.webmanifest
templates/: bad_request.html  verification.html  verification_old.html
templates/components/: _base.html  _base_old.html  _footer.html  _head.html  _header.html  _page_loader.html  _scripts.html
templates/errors/: error.html
